gccida/c1/store_field
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_field/src/expr.c:5497:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_field/src/expr.c:5499:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode value_mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_field/src/expr.c:5508:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_field/src/expr.c:5512:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_field/src/expr.c:5515:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_field/src/expr.c:5521:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v31; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_field/src/expr.c:5524:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v35; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_field/src/expr.c:5538:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v49; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_field/src/expr.c:5540:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v52; // [rsp+Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_field/src/expr.c:5581:64: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& ( mode == BLKmode || direct_store[mode] || ( unsigned int)( mode_class_0[mode] - 5) <= 1) 
                                                               ^~~~~~~~~~~~
                                                               mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_field/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_field/src/expr.c:5591:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v38.rtwint = ( __int64)v13->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_field/src/expr.c:5611:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v46 = ( _QWORD *)v44[1]; 
                 ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_field/src/expr.c:5635:30: error: use of undeclared identifier 'machine_mode'
v24 = convert_modes( mode, ( machine_mode)v26, v24, 1); 
                             ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_field/src/obj/expr.o] Error 1
